Changed to Graph Iso

--- a/assessment.tex
+++ b/assessment.tex
@@ -124,18 +124,20 @@
     \item Explanation of how graph theory is used in Heap Sort.
   \end{itemize}
   
-  \subsubsection*{Thompson's Construction Notebook (40\%)}
-  Include in your repository a Jupyter notebook called \texttt{finite-state.ipynb} that contains the following.
+  \subsubsection*{Graph Isomorphism Problem Notebook (40\%)}
+  Include in your repository a Jupyter notebook called \texttt{graph-isomorphism.ipynb} that contains the following.
   \begin{itemize}
-    \item Overview and explanation of the connection between Finite State Automata and Regular Expressions.
-    \item Python function implementing Thompson's Construction~\cite{thompsonsconstruction}, taking as input a regular expression string over the alphabet \texttt {\{0,1\}} with special characters \texttt{.} for concatenation, \texttt{|} for or, and \texttt{*} for Kleene star. The algorithm should return a function that takes a string as input and returns \texttt{True} if the string matches the regular expression and \texttt{False} otherwise.
+    \item Explanation of the Graph Iomorphism Problem.
+    \item Explanation of how graphs can be represented in data structures.
+    \item Python function implementing an algorithm to determine if two graphs are isomorphic or not.
+    \item Discussion of the computational complexity of the Graph Isomorphism Problem.
   \end{itemize}
 
   \section*{More information about marking}
     In completing the assessment, you should consider the following four aspects of your work.
     It is important that your submission provides direct evidence of each.
     
-    \subsubsection*{Research}
+    \subsubsection*{Research}˘
     Evidence of research performed on topic; submission based on referenced literature, particularly academic literature; evidence of understanding the documentation for any software or libraries used.
     \subsubsection*{Development}
     Environment can be set up as described; code works without tweaking and as described; code is efficient, clean, and clear; evidence of consideration of standards and conventions appropriate to code of this kind.
