--- a/assessment.tex
+++ b/assessment.tex
@@ -137,7 +137,7 @@
     In completing the assessment, you should consider the following four aspects of your work.
     It is important that your submission provides direct evidence of each.
     
-    \subsubsection*{Research}˘
+    \subsubsection*{Research}
     Evidence of research performed on topic; submission based on referenced literature, particularly academic literature; evidence of understanding the documentation for any software or libraries used.
     \subsubsection*{Development}
     Environment can be set up as described; code works without tweaking and as described; code is efficient, clean, and clear; evidence of consideration of standards and conventions appropriate to code of this kind.
